# ai-week-log

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  PRD.md  README.en.md  README.md  index.html.artifact.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  weeklog-desktop-app.html  weeklog-desktop-app.html.artifact.json
.github/workflows/: release.yml
docs/: RELEASE_TEMPLATE.md  signing-macos.md
docs/plans/: 2026-06-14-weeklog-icon-design.md  2026-06-14-weeklog-icon-implementation.md  2026-06-15-auto-update-design.md  2026-06-15-auto-update-implementation.md  2026-06-18-tauri2-migration-feasibility.md
scripts/: create-dev-signing-cert.sh  generate-icons.js  run-electron.js  tauri-build-signed.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/skill/: SKILL.md  record-note.mjs
src-tauri/src/: aggregator.rs  backup.rs  chat.rs  config.rs  git.rs  history.rs  hooks.rs  integration.rs  lib.rs  llm.rs  logger.rs  main.rs  mcp.rs  memory.rs  notes.rs  notes_pool.rs  pipeline.rs  prefs.rs  prompt.rs  render.rs  secrets.rs  tasks.rs  updates.rs  utils.rs  webdav.rs
src/main/: aggregator.js  chat.js  codex-hook-config.js  codex-hook-server.js  codex-pending-notes.js  codex-summary.js  config.js  git.js  icon.js  index.js  ipc.js  local-backup.js  logger.js  memory.js  notes.js  pipeline.js  preferences.js  proxy.js  render.js  secrets.js  tasks.js  updater.js  utils.js  webdav.js  zcode-hook-config.js  zcode-hook-server.js  zcode-pending-notes.js  zcode-summary.js
src/main/llm/: anthropic.js  base.js  index.js  openai.js  stream.js
src/preload/: index.js
src/renderer/: app.js  index.html  quicknote.html
src/renderer/public/: theme-init.js
src/renderer/src/: App.tsx  main.tsx  quicknote.tsx
src/renderer/src/components/: AppShell.tsx  BrandIcons.tsx  ExistingReportCard.tsx  GithubIcon.tsx  Markdown.tsx  MemoryProjectHint.tsx  NoteCard.tsx  PendingNotePool.tsx  ProjectSelect.tsx  ReportPreview.tsx  StatCard.tsx  Statusbar.tsx  TaskIndicator.tsx  ThemeToggle.tsx
src/renderer/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  radio-group.tsx  select.tsx  sonner.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  toggle-group.tsx  tooltip.tsx
src/renderer/src/hooks/: useConfig.tsx  useExistingReport.ts  useGenerate.ts  useMemoryProjectInference.ts  useNav.tsx  useShortcut.ts  useTasks.tsx  useTheme.tsx
src/renderer/src/lib/: api.tauri.ts  api.ts  dates.ts  reportFormat.ts  utils.ts
src/renderer/src/pages/: ChatPage.tsx  DailyPage.tsx  DashboardPage.tsx  GeneratePage.tsx  HistoryPage.tsx  LogsPage.tsx  NotesPage.tsx  ReposPage.tsx  SettingsPage.tsx
src/renderer/src/styles/: globals.css
src/renderer/src/types/: weeklog.d.ts
tests/: _auto_update_test.js  _chat_test.js  _codex_hook_config_test.js  _codex_hook_server_test.js  _codex_pending_notes_test.js  _codex_pending_notes_ui_test.js  _gitreal.js  _icon_assets_test.js  _installer_test.js  _local_backup_test.js  _local_backup_ui_test.js  _logs_test.js  _memory_controls_test.js  _memory_project_inference_ui_test.js  _model_cache_test.js  _notes_timeline_delete_ui_test.js  _quicknote_layout_test.js  _renderer_layout_test.js  _secrets_test.js  _security_regression_test.js  _settings_collapse_test.js  _sidebar_collapse_test.js  _skill_record_note_test.js  _smoke.js  _tauri_linker_test.js  _webdav_backup_test.js  _webdav_backup_ui_test.js  _zcode_hook_config_test.js  _zcode_hook_server_test.js  _zcode_pending_notes_test.js
