[package]
name = "weeklog"
version = "1.3.8"
description = "WeekLog — 本地 Git 周报/日报生成桌面客户端"
authors = ["WeekLog"]
license = "MIT"
# Tauri 2 要求 Rust edition 2021
edition = "2021"
rust-version = "1.77.2"

# 见 https://tauri.app/v1/guides/features/command-line-interface/
[lib]
name = "weeklog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
# 序列化 IPC 请求/响应（对齐渲染层 WeeklogAPI 类型）
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 骨架阶段仅用最小依赖；后续阶段按需追加：
# - git 采集：tauri-plugin-shell 的 Command（或 std::process::Command）
# - LLM 流式：reqwest + tauri::ipc::Channel
# - 嵌入：ort + tokenizers
# - WebDAV：reqwest_dav
# - 密钥：keyring

[features]
# 默认启用自定义协议（自定义协议在正式构建才需要）
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
